<resources>
    <string name="app_name">NMedia</string>
    <string name="title_events">Events</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="remove">Remove</string>
    <string name="description_photo">Photo</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="retry_loading">Retry</string>
    <string name="error_loading">Something went wrong</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="new_message">"New message"</string>
    <string name="action_sign_in">Sign in</string>
    <string name="edit_text">Edit text</string>
    <string name="name">Name</string>
    <string name="sign_in">Sign In</string>
    <string name="datetime">Date of the event</string>
    <string name="company_name">Company name</string>
    <string name="position">Position</string>
    <string name="save">Сохранить</string>
    <string name="job_link">Company site</string>
    <string name="add_job">Add job</string>
    <string name="choose_date">Select date</string>
    <string name="edit_position">Fill position</string>
    <string name="edit_company">Fill company</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="event_time">Event time</string>
    <string name="chooser_share_event">Share event</string>
    <string name="title_jobs">Job</string>
    <string name="sign_in_required">Sign in required</string>
    <string name="auth">Sign in</string>
    <string name="event_type">Event type</string>
    <string name="event_date">Event date</string>
    <string name="title_posts">Posts</string>
    <string name="event_info">Event info</string>
    <string name="jobs_empty">No info about jobs</string>
    <string name="job_leave_data">Job End</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="api_error">Unable to execute action</string>
    <string name="error_empty_content">Content must be filled</string>
    <string name="close">Close</string>
    <string name="choose_time">Select event time</string>
    <string name="reject_participate">Reject</string>
    <string name="chooser_share_post">Share post</string>
    <string name="posts_empty">No posts</string>
    <string name="fill_event_date">Select event date</string>
    <string name="error_sign_in">Failed to authorize</string>
    <string name="datetime_format">%1$s:%2$s</string>
    <string name="fill_login">Fill login</string>
    <string name="fill_password">Fill password</string>
    <string name="fill_confirm_password">Fill confiirm password</string>
    <string name="fill_name">Fill name</string>
    <string name="passwords_not_equal">Passwords are not equal</string>
    <string name="sign_in_success">Successful authorized</string>
    <string name="participants_count">Participants count</string>
    <string name="attachment">Attachment</string>
    <string name="like">Like</string>
    <string name="add">Add</string>
    <string name="avatar">Avatar</string>
    <string name="error_sign_up">Failed to register</string>
    <string name="sign_up_success">Successful registered</string>
    <string name="event_datetime">Event datetime</string>
    <string name="share">Share</string>
    <string name="fill_event_time">Select event time</string>
    <string name="fill_event_content">Fill event content</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="title_attachment">Attahcment</string>
    <string name="title_post">Post</string>
    <string name="event">Event</string>
    <string name="title_job">Job</string>
    <string name="events_empty">No events</string>
    <string name="participate">Participate</string>
    <string name="confirm_password">Confirm password</string>
    <string name="cancel">Cancel</string>
    <string name="job_start_date">Start</string>
</resources>