<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_spacing"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/description_photo"
            android:src="@drawable/ic_camera_24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/removePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/remove" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pickPhoto"
                style="@style/Widget.AppTheme.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_select_photo"
                android:padding="@dimen/common_spacing"
                app:icon="@drawable/ic_photo_24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/takePhoto"
                style="@style/Widget.AppTheme.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_take_photo"
                android:padding="@dimen/common_spacing"
                app:icon="@drawable/ic_camera_24dp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            android:hint="@string/name"
            app:errorEnabled="true"
            app:expandedHintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            android:hint="@string/login"
            app:errorEnabled="true"
            app:expandedHintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:expandedHintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:expandedHintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:contentDescription="@string/sign_in"
            />

    </LinearLayout>

</ScrollView>