<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingVertical="@dimen/common_spacing"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/common_spacing"
            android:paddingEnd="@dimen/common_spacing">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_spacing"
                android:hint="@string/event_date"
                app:endIconCheckable="false"
                app:endIconDrawable="@drawable/ic_cancel_24"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:expandedHintEnabled="false"
                app:startIconContentDescription="@string/event_date"
                app:startIconDrawable="@drawable/ic_outline_calendar_today_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/time"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_spacing"
                android:hint="@string/event_time"
                app:endIconCheckable="false"
                app:endIconDrawable="@drawable/ic_cancel_24"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:expandedHintEnabled="false"
                app:startIconContentDescription="@string/event_time"
                app:startIconDrawable="@drawable/ic_baseline_access_time_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_spacing"
                android:hint="@string/event_type"
                android:textSize="12sp" />

            <RadioGroup
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_spacing"
                android:checkedButton="@+id/online"
                app:useMaterialThemeColors="false">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/online"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/online"
                    app:useMaterialThemeColors="false" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/offline"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/offline"
                    app:useMaterialThemeColors="false" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_spacing"
                android:hint="@string/event_info"
                android:maxLines="10"
                app:endIconCheckable="false"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:expandedHintEnabled="false"
                app:startIconContentDescription="@string/event_info">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:lines="10"
                    android:maxLines="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/photoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/description_photo"
                    android:scaleType="fitStart" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/removePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/remove" />
            </FrameLayout>
        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toTopOf="@id/button_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/button_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickPhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_select_photo"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/ic_photo_24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_take_photo"
            android:padding="@dimen/common_spacing"
            app:icon="@drawable/ic_camera_24dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>