<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_spacing"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/start"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_spacing"
                android:hint="@string/job_start_date"
                app:endIconCheckable="false"
                app:endIconDrawable="@drawable/ic_cancel_24"
                app:endIconMode="custom"
                app:startIconContentDescription="@string/job_start_date"
                app:startIconDrawable="@drawable/ic_outline_calendar_today_24"
                app:errorEnabled="true"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/finish"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_spacing"
                android:hint="@string/job_leave_data"
                app:endIconDrawable="@drawable/ic_cancel_24"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:expandedHintEnabled="false"
                app:startIconContentDescription="@string/job_leave_data"
                app:startIconDrawable="@drawable/ic_outline_calendar_today_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_spacing"
                android:hint="@string/company_name"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/position"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_spacing"
                android:hint="@string/position"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/link"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_spacing"
                android:hint="@string/job_link"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:expandedHintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

</ScrollView>